--- a/page1.html
+++ b/page1.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
-<head> 
-<meta charset="utf-8">
-<title>Annual Means</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type="text/css" href="assets/css/difference.css">
+  <title>Annual Mean Precipitation</title>
   
+
+  <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
+  <script src="page1.js"></script>
+
   <script src="//use.typekit.net/kqk3lzp.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="assets/js/jquery-ui.min.js"></script> 
+  <script src="assets/bootstrap/js/bootstrap.js"></script>
   <script src="d3.min.js"></script>
-
 </head>
 
 <body>
-  <!--<h1>Bar Chart with Negative Values</h1> -->
+ 
+  <div class="container-fluid layer">
 
+        <div class="row">
+          <div class="col-sm-2 coll-sm-offset-1">
+            <a href="http://plotandscatter.com/projects/"><h3 class="plot">Plot <span class="brandcolor">+</span> Scatter</h3></a>
+          </div>
+        </div>
 
-<script src="page1.js"></script>
+   
+    
 
+      
+      <script src="page1.js"></script> 
+   </div>
 </body>
+
 </html>
+
