Tweaked responsive header

--- a/page1.html
+++ b/page1.html
@@ -26,8 +26,15 @@
   <div class="container-fluid layer">
 
         <div class="row">
-          <div class="col-sm-2 coll-sm-offset-1">
+          <div class="col-sm-12 col-sm-6 col-md-8 col-sm-offset-1">
             <a href="http://plotandscatter.com/projects/"><h3 class="plot">Plot <span class="brandcolor">+</span> Scatter</h3></a>
+            yes this is me
+          </div>
+        </div>
+    
+      <div class="row">
+          <div class="col-sm-2 coll-sm-offset-1">
+            
           </div>
         </div>
 
