--- a/means.html
+++ b/means.html
@@ -13,7 +13,7 @@
 
   <script src="//use.typekit.net/kqk3lzp.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.js"></script>
  
 </head>
@@ -43,7 +43,7 @@
   </div>
   
   <script src="assets/js/d3.min.js" charset="utf-8"></script>
-  <script type="text/javascript" src="page1.js">
+  <script type="text/javascript" src="means.js">
       
   </script> 
 </body>
